force-app/main/default/objects/Account/fields/Difference__c.field-meta.xml
<CustomField>
    <fullName>Difference__c</fullName>
    <label>Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>