force-app/main/default/objects/Account/fields/Number_to_Diferintiate__c.field-meta.xml
<CustomField>
    <fullName>Number_to_Diferintiate__c</fullName>
    <label>Number to Diferintiate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>